--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../EIva.AlgorithmsTest/packages.config" />
   <repository path="../GraphTest/packages.config" />
   <repository path="../QueueTest/packages.config" />
 </repositories>
