--- a/EIva.Algorithms/EIva.Algorithms.csproj
+++ b/EIva.Algorithms/EIva.Algorithms.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Tree\Tree.cs" />
     <Compile Include="ConnectedComponents\UnionFind.cs" />
     <Compile Include="DictionaryHelper.cs" />
+    <Compile Include="ConnectedComponents\Contract.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
